# ship-lens

./: .gitignore  CHANGELOG.md  LICENSE  MOUNT_COMPATIBILITY_IMPLEMENTATION.md  PENDING_CHANGES.md  README.md  index.html  p4k-data  package-lock.json  package.json  run.sh  sc-data  ship-lens.sh  vite.config.ts
.claude/agents/: code-savant-reviewer.md  ship-lens-data-pipeline.md  ship-lens-docs.md  ship-lens-release.md  ship-lens-ttk-validator.md  star-citizen-mechanics-researcher.md
.github/workflows/: release.yml
Game Research/: DAMAGE_FORMULAS_4.5.md  Star Citizen Component Investigation 4.5.md  Star Citizen Ship Combat Mechanics Research.md  StarCitizen-Ships-Weapons-Components.md
data/: VALIDATION_REPORT_2025-12-31.md  VALIDATION_REPORT_2025-12-31.txt  missiles.csv  missiles.json  mounts.json  shields.csv  shields.json  shields_combined.csv  ship_hardpoint_summary.csv  ship_hull_hp.csv  ship_parts_comprehensive.csv  ship_weapon_hardpoints.csv  ship_weapon_hardpoints.csv.bak  ship_weapons.csv  ships.csv  weapon_power_data.csv  weapons.csv  weapons.json  weapons_combined.csv
data/ships/: AEGS_AVENGER_STALKER.json  AEGS_AVENGER_TITAN.json  AEGS_AVENGER_TITAN_RENEGADE.json  AEGS_AVENGER_WARLOCK.json  AEGS_ECLIPSE.json  (+581 more)
scripts/: extract_component_hp.py  extract_ship_loadouts.py  fix_missiles.py
src/: create_damage_calculator_v12_fixed.py  extract_ship_parts_comprehensive.py  main.ts  ship_lens.py  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: data.rs  lib.rs  main.rs  ttk.rs
(+1 files in other folders)
