[package]
name = "ship-lens"
version = "0.1.16"
description = "Star Citizen Damage Calculator"
authors = ["kengonza"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ship_lens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["devtools"] }
tauri-plugin-log = "2"
csv = "1.3"
tauri-plugin-process = "2.3.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.9.0"

[target.'cfg(target_os = "linux")'.dependencies]
ureq = "2.9"
